PHP Cookies now set site wide and Admin Interface, frequency input field set default value to 0 so it is never blank.
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-maintenance-mode/trunk@936064 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,14 @@
 *** WooCommerce Maintenance Mode Changelog ***
 
+= 1.2 =
+* 2014-06-21
+* Cookies set with php, now set site wide
+* Admin Interface, frequency input field set default value to 0
+
+= 1.1 =
+* 2014-06-11
+* Replaced Fancybox with prettyPhoto 
+
 = 1.0 =
 * 2014-06-09
 * Initial release
