Added Countdown option to display a countdown timer until maintenance/message end date and added admin button to remove all cookies set by plugin
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-maintenance-mode/trunk@947895 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 *** WooCommerce Maintenance Mode Changelog ***
 
+= 1.3 =
+* 2014-07-13
+* Added Countdown option to display a countdown timer until maintenance/message end date
+* Added admin button to remove all cookies set by plugin
+
 = 1.2 =
 * 2014-06-21
 * Cookies set with php, now set site wide
